--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 3
+      Docs
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -12,6 +12,7 @@
       <ion-title size="large">Tab 3</ion-title>
     </ion-toolbar>
   </ion-header>
-
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <br/>
+  <div class="pad"></div>
+    <h1 class="ion-padding"><a href="https://ionicframework.com/docs/api/infinite-scroll">See Ionic Docs</a></h1>
 </ion-content>
