--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,25 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      Infinite Scroll
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+<ion-content>
+  <ion-card *ngFor="let user of users">
+   <ion-item>
+    <ion-avatar slot="start">
+      <img [src]="user.picture.thumbnail">
+    </ion-avatar>
+    <ion-label>
+      <h2 text-capitalise>{{user.name?.first}} {{user.name?.last}}</h2>
+      <p>{{user.email}}</p>
+    </ion-label>
+   </ion-item>
+  </ion-card>
+  <ion-infinite-scroll threshold="5%" (ionInfinite)="loadData($event)">
+    <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Loading more users...">
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 </ion-content>
